security(phase-0): add CSRF protection, input validation, and security headers
API Route Security Enhancements:
- CSRF protection via origin verification
- Input validation with Zod schemas
- Request timeouts (30s) with AbortController
- Sanitized error messages (dev vs prod)
- Structured logging for observability

Security Middleware:
- X-Content-Type-Options: nosniff
- X-Frame-Options: DENY
- X-XSS-Protection: 1; mode=block
- Referrer-Policy: strict-origin-when-cross-origin
- Permissions-Policy restrictions
- Content-Security-Policy for API routes

Environment Configuration:
- Added ALLOWED_ORIGINS for CSRF protection
- Documented all optional configuration
- Added monitoring and feature flag placeholders

Fixes: C2.1 (CSRF), C2.2 (validation), C2.3 (.env.example),
       H2.2 (timeouts), H2.3 (error sanitization), H2.4 (logging)

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -3,7 +3,32 @@
 NEXT_PUBLIC_API_URL=http://localhost:8000
 
 # WebSocket URL (defaults to same as API_URL but with ws:// protocol)
+# Uncomment and set if your WebSocket server is on a different URL
 # NEXT_PUBLIC_WS_URL=ws://localhost:8000
 
 # Environment (development, staging, production)
 NEXT_PUBLIC_ENV=development
+
+# CSRF Protection - Allowed Origins (comma-separated)
+# Add all origins that should be allowed to make requests to your API routes
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
+
+# Rate Limiting (Upstash Redis) - OPTIONAL
+# Uncomment to enable rate limiting on API routes
+# UPSTASH_REDIS_REST_URL=
+# UPSTASH_REDIS_REST_TOKEN=
+
+# Monitoring/Observability - OPTIONAL
+# LangSmith integration for frontend tracing
+# NEXT_PUBLIC_LANGSMITH_API_KEY=
+# NEXT_PUBLIC_LANGSMITH_PROJECT=deep-agent-agi-frontend
+
+# Error Tracking (e.g., Sentry) - OPTIONAL
+# NEXT_PUBLIC_SENTRY_DSN=
+
+# Feature Flags - OPTIONAL
+# NEXT_PUBLIC_ENABLE_HITL=true
+# NEXT_PUBLIC_ENABLE_STREAMING=true
+
+# Agent Configuration - OPTIONAL
+# NEXT_PUBLIC_AGENT_NAME=deepAgent
